syntax = "proto3";

package api.file.v1;

option go_package = "fms/api/file/v1;v1";
option java_multiple_files = true;
option java_package = "api.file.v1";

service File {
	rpc UploadFile (stream UploadFileRequest) returns (UploadFileReply);
}

message UploadFileRequest {
	string file_name = 1;
	string file_path = 2;
	string bucket = 3;
	bytes file = 4;
}

message UploadFileReply {
	string status = 5;
	string file_name = 1;
	string file_path = 2;
	string bucket = 3;
	string message = 4;
}